fix for image widget alignment

--- a/less/theme.less
+++ b/less/theme.less
@@ -211,7 +211,6 @@
 }
 
 .page-title__container {
-	width: 90%;
 	padding: 0 5%;
 	background-image: image('/images/ampersand-bg.jpg');
 	background-repeat: no-repeat;
