--- a/less/widgets.less
+++ b/less/widgets.less
@@ -381,6 +381,13 @@
 // 5.  #Images
 // -----------------------------
 
+// Image Widget
+// ------------
+
+.image-link {
+    display: inline-block;
+}
+
 // Image Captions
 // --------------
 
